tools/common/errors/src/tests/mod.rs
//! Tests for the common errors module
//!
//! This module contains comprehensive tests for the common errors module.

mod error_conversion_tests;
mod context_tests;
mod validation_tests;
mod reporting_tests;
mod category_tests;
mod error_formatting_tests;

// Re-export all test modules

// Re-export any utility functions if needed